# strict-io

./: .gitignore  README.md  pyproject.toml
strict_io/: _common.py  _typing.py  csv.py  json.py
tests/: test_read_csv.py  test_read_json.py
tests/data/: addresses.csv.bz2
