[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "strict_io"
authors = [{name = "Anexen"}]
readme = "README.md"
version = "0.1.0"
description = "Read structured file into pydantic models"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.urls]
Home = "https://github.com/Anexen/strict-io"

[project.optional-dependencies]
test = [
    "pydantic >= 1",
    "pytest >= 6",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2
